--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 /* 공용 컨테이너 */
 .container { width: 950px; margin: 0 auto; text-align: center;}
 
+
+/* 헤더 css */
 .header {
   width: 100%;
 }
@@ -136,6 +138,8 @@
   height: 28px;
 }
 
+
+/* 카테고리 네비 css */
 .all-category-container {
 	display: flex;
 	border-bottom: 1px solid #f5f5f5;
@@ -152,33 +156,33 @@
   color: #000000;
 }
 
+
+/* 메인 css */
 .carousel-section {
 	margin-top: 50px;
 }
 
 .carousel-section-content {
   position: relative;
-  height: 400px;
+	width: 950px;
+	height: 400px;
+	overflow: hidden;
 }
 
 .carousel-section-list {
-  margin: 0px;
-  padding: 0px;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+	display: flex;
+	width: 100%;
+	transform: translate3d(0, 0, 0);
+  transition: transform 0.2s;
 }
 
 .carousel-section-item {
-  position: absolute;
   list-style: none;
-  width: 100%;
-  height: 100%;
 }
 
 .carousel-img {
   list-style: none;
-  width: 100%;
+  width: 950px;
   height: 400px;
   object-fit: cover;
   border-radius: 10px
@@ -216,11 +220,74 @@
 
 .select-category-content {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .best-category-content-list,
 .new-category-content-list,
 .recommend-category-content-list {
   display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.best-category-content-item,
+.new-category-content-item,
+.recommend-category-content-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 10px 0;
+}
+
+.best-item-img {
+	width: 180px;
+	border-radius: 10px;
+}
+
+.best-item-title {
+	width: 180px;
+	overflow: visible;
+	font-weight: 700;
+	font-size: 14px;
+}
+
+
+/* 푸터 css */
+#footer { 
+	width: 100%;
+	border-top: 1px solid #dbdbdb 
+}
+
+.footer {
+	text-align: center; 
+	margin-top: 200px;
+	height: 100px;
+	padding: 20px 50px; 
+	font-size: 10px;
+}
+
+.footer li { 
+	position: relative; 
+	display: inline; 
+	padding: 0 7px 0 10px; 
+	white-space: nowrap;
+}
+
+.footer address { 
+	padding-top: 15px;
+}
+
+.footer li:before { 
+	content: ''; 
+	width: 1px; 
+	height: 12px; 
+	background-color: #dbdbdb; 
+	position: absolute; 
+	left:0; 
+	top: 2px;
+}
+
+.footer li:first-child:before { 
+	width: 0; 
 }
