fix: input,label tag and css in signup.html, signup.css

--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -56,5 +56,5 @@
 }
 
 .signup-id, .signup-pw, 
-.signup-button, .signup-name,
-.signup-regist { font-size: 2rem;}
+.signup-button, .signup-email,
+.signup-name { font-size: 2rem;}
