--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -3,415 +3,451 @@
 @import "font-awesome.css";
 
 /* 전체 레이아웃 */
-#wrap { width: 100%; background-color: #eee;}
-#header { width: 100%; }
-#main { width: 100%; }
+#wrap {
+    width: 100%;
+    background-color: #eee;
+}
+#header {
+    width: 100%;
+}
+#main {
+    width: 100%;
+}
 
 /* 공용 컨테이너 */
-.container { width: 950px; margin: 0 auto; text-align: center;}
-
+.container {
+    width: 950px;
+    margin: 0 auto;
+    text-align: center;
+}
 
 /* 헤더 css */
 .header {
-  width: 100%;
+    width: 100%;
 }
 
 .header-top-list {
-  display: flex;
-  justify-content: right;
-  align-items: center;
+    display: flex;
+    justify-content: right;
+    align-items: center;
 }
 
 .header-top-item {
-  display: inline-flex;
-  align-items: center;
+    display: inline-flex;
+    align-items: center;
 }
 
 .header-top-item .join,
 .header-top-item .login {
-  display: inline-flex;
-  padding: 12px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 18px;
-  text-align:center;
-  color:#787878;
+    display: inline-flex;
+    padding: 12px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    color: #787878;
 }
 
 .header-top-item:first-child::after {
-  content: '';
-  display: inline-block;
-  width: 3px;
-  height: 3px;
-  margin-top: 3px;
-  border-radius: 3px;
-  background: #e6e6e6;
+    content: "";
+    display: inline-block;
+    width: 3px;
+    height: 3px;
+    margin-top: 3px;
+    border-radius: 3px;
+    background: #e6e6e6;
 }
 
 .header-title-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 0;
 }
 
 .header-title-logo {
-  display: flex;
-  margin: 0;
-  margin-right: auto;
+    display: flex;
+    margin: 0;
+    margin-right: auto;
 }
 
 .header-title-link {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .header-title-link .logo-img {
-  width: 50px;
-  height: 50px;
-  padding-right: 8px;
+    width: 50px;
+    height: 50px;
+    padding-right: 8px;
 }
 
 .header-title-link .header-title-name {
-  font-weight: 700;
-  font-size: 50px;
-  color: #606DB8;
+    font-weight: 700;
+    font-size: 50px;
+    color: #606db8;
 }
 
 .header .header-title-search {
-  display: flex;
-  align-items: flex-start;
-  margin-right: 8px;
+    display: flex;
+    align-items: flex-start;
+    margin-right: 8px;
 }
 
 .header .header-title-search-bar {
-  position: relative;
-  display: flex;
-  width: 300px;
-  border: 2px solid #606DB8;
-  border-radius: 50px;
+    position: relative;
+    display: flex;
+    width: 300px;
+    border: 2px solid #606db8;
+    border-radius: 50px;
 }
 
 .header .search-img {
-  position: absolute;
-  width: 17px;
-  top: 11px;
-  left: 12px;
-  margin-right: 12px;
+    position: absolute;
+    width: 17px;
+    top: 11px;
+    left: 12px;
+    margin-right: 12px;
 }
 
 .header .search-input {
-  width: 100%;
-  height: 100%;
-  padding: 10px 12px;
-  margin-left: 35px;
-  border: none;
-  background: none;
-  font-size: 14px;
+    width: 100%;
+    height: 100%;
+    padding: 10px 12px;
+    margin-left: 35px;
+    border: none;
+    background: none;
+    font-size: 14px;
 }
 
 .header .search-input:focus {
-  outline: none;
+    outline: none;
 }
 
 .header-title-info {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .header-info-item {
-  display: inline-flex;
-  margin: 0 6px;
+    display: inline-flex;
+    margin: 0 6px;
 }
 
 .header-info-basket,
 .header-info-my {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: 6px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
 }
 
 .basket-img,
 .my-img {
-  width: 28px;
-  height: 28px;
+    width: 28px;
+    height: 28px;
 }
-
 
 /* 메인 css */
 .main {
-  width: 100%;
+    width: 100%;
 }
 
 .main-container {
-  display: flex;
+    display: flex;
 }
 
 .nav-side-category-bar {
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 5px;
-  width: 240px;
-  margin-top: 60px;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    width: 240px;
+    margin-top: 60px;
 }
 
 .nav-side-category-link {
-  text-align: left;
-  width: 100px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
-  padding: 3px 0 3px 5px;
+    text-align: left;
+    width: 100px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 3px 0 3px 5px;
 }
 
 .category-line-active {
-  border-radius: 3px;
-  background-color: #606DB8;
-  color: #ffffff;
+    border-radius: 3px;
+    background-color: #606db8;
+    color: #ffffff;
 }
 
 .category-book-list-section {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  max-width: 710px;
-  margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 710px;
+    margin-top: 30px;
 }
 
 .category-book-title-area {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 54px;
-  padding: 10px 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 54px;
+    padding: 10px 0;
 }
 
 .category-book-title {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 25px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 25px;
 }
 
 .category-book-line {
-  display:block;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  height: 1px;
-  background-color: #D1D5D9;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    height: 1px;
+    background-color: #d1d5d9;
 }
 
 .category-book-list {
-  display: inline-flex;
-  flex-direction: column;
-  width: 100%;
-  margin-top: 10px;
-  margin-bottom: 60px;
+    display: inline-flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 60px;
 }
 
 .category-book-item {
-  display: inline-flex;
-  padding: 30px 0;
-  border-bottom: 1px solid #f0f0f0;
+    display: inline-flex;
+    padding: 30px 0;
+    border-bottom: 1px solid #f0f0f0;
 }
 
-.category-book-list .category-book-item:first-of-type{
-  padding-top: 0;
+.category-book-list .category-book-item:first-of-type {
+    padding-top: 0;
 }
 
-.category-book-list .category-book-item:last-of-type{
-  padding-bottom: 0;
-  border: none;
+.category-book-list .category-book-item:last-of-type {
+    padding-bottom: 0;
+    border: none;
 }
 
 .category-book-item-img-area {
-  display: flex;
-  width: 120px;
-  margin-right: 30px;
+    display: flex;
+    width: 120px;
+    margin-right: 30px;
 }
 
 .category-book-img-link {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .category-book-img {
-  width: 120px;
-  height: 174px;
-  border-radius: 4px;
+    width: 120px;
+    height: 174px;
+    border-radius: 4px;
 }
 
 .category-book-item-introduce {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;;
-  align-items: start;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    padding-right: 30px;
 }
 
 .category-book-item-title-head {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .category-book-item-title {
-  margin-bottom: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  color: #141414;
-  line-height: 19px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-break: keep-all;
-  white-space: normal;
-  max-height: calc(19px * 1);
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #141414;
+    line-height: 19px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    white-space: normal;
+    max-height: calc(19px * 1);
 }
 
 .category-book-item-output {
-  display: inline-flex;
-  width: 100%;
-  margin-bottom: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    display: inline-flex;
+    width: 100%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .category-book-item-author,
 .category-book-item-publisher {
-  display:inline;
-  font-size: 14px;
-  line-height: 16px;
-  color: #787878;
+    display: inline;
+    font-size: 14px;
+    line-height: 16px;
+    color: #787878;
 }
 
 .category-book-item-publisher::before {
-  content: '';
-  display: inline-block;
-  background-color: #787878;
-  width: 2px;
-  height: 2px;
-  margin: 0 5px 4px;
-  border-radius: 100%;
+    content: "";
+    display: inline-block;
+    background-color: #787878;
+    width: 2px;
+    height: 2px;
+    margin: 0 5px 4px;
+    border-radius: 100%;
 }
 
 .category-book-item-describe {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  text-align: start;
-  width: 100%;
-  margin-bottom: 4px;
-  font-size: 14px;
-  color: #666666;
-  line-height: 20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-break: keep-all;
-  word-wrap: break-word;
-  white-space: normal;
-  max-height: calc(20px * 2);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-align: start;
+    width: 100%;
+    margin-bottom: 4px;
+    font-size: 14px;
+    color: #666666;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    word-wrap: break-word;
+    white-space: normal;
+    max-height: calc(20px * 2);
 }
 
 .category-book-item-price {
-  text-align: left;
-  padding: 0px;
-  font-weight: 400;
-  font-size: 13px;
-  color: #606DB8;
-  line-height: 16px;
+    text-align: left;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 13px;
+    color: #606db8;
+    line-height: 16px;
+}
+
+.book-btn {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.book-btn > .add-cart,
+.order-book {
+    margin-bottom: 10px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 10px;
+}
+
+.book-btn > .add-cart {
+    color: #475086;
+    background: white;
+    box-shadow: 0 0 5px 0.1px #606db8;
+}
+.book-btn > .order-book {
+    color: white;
+    border: 2.5px solid #606db8;
+    background-color: #606db8;
 }
 
 .category-book-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 50px;
 }
 
 .category-book-page-prev,
 .category-book-page-next {
-  padding: 7px;
+    padding: 7px;
 }
 
 .category-page-prev-text,
 .category-page-next-text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 34px;
-  height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
 }
 
 .arrow-img-left {
-  transform: rotate(180deg)
+    transform: rotate(180deg);
 }
 
 .arrow-img-left,
 .arrow-img-right {
-  width: 20px;
-  height: 20px;
-  color: #606DB8
+    width: 20px;
+    height: 20px;
+    color: #606db8;
 }
 
 .page-number-list {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 300px;
 }
 
 .page-number-text {
-  text-align: center;
-  vertical-align: center;
-  font-size: 20px;
-  color: #606DB8;
+    text-align: center;
+    vertical-align: center;
+    font-size: 20px;
+    color: #606db8;
 }
 
 .page-number-text-active {
-  font-weight: 700;
+    font-weight: 700;
 }
 
-
 /* 푸터 css */
-#footer { 
-	width: 100%;
-	border-top: 1px solid #dbdbdb 
+#footer {
+    width: 100%;
+    border-top: 1px solid #dbdbdb;
 }
 
 .footer {
-	text-align: center; 
-	margin-top: 200px;
-	height: 100px;
-	padding: 20px 50px; 
-	font-size: 10px;
+    text-align: center;
+    margin-top: 200px;
+    height: 100px;
+    padding: 20px 50px;
+    font-size: 10px;
 }
 
-.footer li { 
-	position: relative; 
-	display: inline; 
-	padding: 0 7px 0 10px; 
-	white-space: nowrap;
+.footer li {
+    position: relative;
+    display: inline;
+    padding: 0 7px 0 10px;
+    white-space: nowrap;
 }
 
-.footer address { 
-	padding-top: 15px;
+.footer address {
+    padding-top: 15px;
 }
 
-.footer li:before { 
-	content: ''; 
-	width: 1px; 
-	height: 12px; 
-	background-color: #dbdbdb; 
-	position: absolute; 
-	left:0; 
-	top: 2px;
+.footer li:before {
+    content: "";
+    width: 1px;
+    height: 12px;
+    background-color: #dbdbdb;
+    position: absolute;
+    left: 0;
+    top: 2px;
 }
 
-.footer li:first-child:before { 
-	width: 0; 
+.footer li:first-child:before {
+    width: 0;
 }
