--- a/src/style.css
+++ b/src/style.css
@@ -267,6 +267,8 @@
 }
 
 .footer {
+    display: flex;
+    align-items: center;
     text-align: center;
     margin-top: 200px;
     height: 100px;
