fix: login, signup, mypage

--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -109,7 +109,7 @@
     text-align: center;
 }
 .signup-button input {
-    margin-top: 40px;
+    margin: 40px 0 56px 0;
     height: 46px;
     color: #fff;
     padding: 0 15px;
