--- a/src/css/modify_mypage.css
+++ b/src/css/modify_mypage.css
@@ -150,12 +150,14 @@
 
 main .header-text {
     font-size: 25px;
-    color: #11111;
     font-weight: 500;
     padding: 20px 0px 20px 0px;
     border-bottom: 2px solid #dbdbdb;
 }
 
+main .header-text {
+    color: #000;
+}
 main .header-text > span {
     position: relative;
     padding-left: 10px;
@@ -205,11 +207,14 @@ main h3 {
 
 .table > .field {
     font-weight: 500;
-    padding-left: 20px;
+    padding: 0 20px;
     border: 1px solid #e6e6e6;
     display: flex;
     align-items: center;
-    justify-content: baseline;
+}
+
+.table > .field input {
+    width: 87%;
 }
 
 .table .email-field {
@@ -236,16 +241,12 @@ main h3 {
     margin-bottom: 10px;
 }
 
-.table .password-field input:hover {
-    border: #606db8;
-}
-
 .table .password-field p {
     padding-top: 10px;
 }
 
 .table .password-field ul > li::before {
-    content: "•  ";
+    content: "❈ ";
 }
 
 .table .password-field button {
