--- a/src/style.css
+++ b/src/style.css
@@ -260,6 +260,42 @@
     font-size: 14px;
 }
 
+/* 책 리스트 */
+
+.products-list-info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 200px;
+    height: 400px;
+    border: 0;
+    display: inline-block;
+    padding: 10px;
+    margin: 10px;
+}
+
+.products-list-info > img {
+    width: 164px;
+    height: 240px;
+    filter: drop-shadow(0 0 4px grey);
+}
+.products-list-info > p {
+    padding-bottom: 10px;
+}
+.products-list-info > p.title {
+    white-space: nowrap;
+    padding-bottom: 10px;
+    font-size: 20p;
+}
+.products-list-info > p.author {
+    padding-bottom: 10px;
+}
+.products-list-info > p.introduction {
+    padding-bottom: 10px;
+}
+.products-list-info > p.price {
+    padding-bottom: 10px;
+}
+
 /* 푸터 css */
 #footer {
     width: 100%;
