--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -155,25 +155,48 @@
 
 .main-container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-side-category-bar {
     display: flex;
-    justify-content: start;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 5px;
-    width: 240px;
-    margin-top: 60px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .nav-side-category-link {
-    text-align: left;
-    width: 100px;
-    font-weight: 700;
-    font-size: 14px;
+    position: relative;
+    text-align: center;
+    font-weight: 400;
+    font-size: 18px;
     line-height: 17px;
-    padding: 3px 0 3px 5px;
+    padding: 16px 4px;
+    margin: 0 20px;
+    border-radius: 20px;
+    color: darkgray;
+    transition: all 0.3 ease-in;
+}
+
+.nav-side-category-link:before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #606db8;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.nav-side-category-link:hover:before {
+    opacity: 1;
+}
+.nav-side-category-link:hover {
+    color: #000;
 }
 
 .category-line-active {
@@ -191,19 +214,19 @@
     margin-top: 30px;
 }
 
-.category-book-title-area {
+.category-book-title {
     display: flex;
     align-items: center;
     width: 100%;
     height: 54px;
-    padding: 10px 0;
-}
-
-.category-book-title {
+    padding: 12px 22px;
+    margin-top: 42px;
     font-weight: 700;
     font-size: 24px;
     line-height: 25px;
+    border-bottom: 2px solid lightgray;
 }
+
 
 .category-book-line {
     display: block;
