--- a/src/style.css
+++ b/src/style.css
@@ -260,6 +260,91 @@
     font-size: 14px;
 }
 
+/* 책 리스트 */
+
+.products-list-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+.products-list-header > h2 {
+    font-size: 25px;
+}
+.products-list-header > p {
+    font-size: 17px;
+    color: #787878;
+}
+
+.products-list-body {
+    height: 440px;
+    position: relative;
+    overflow: hidden;
+}
+
+.products-list-body .slides {
+    position: absolute;
+    width: 1900px;
+    left: 0;
+    transition: left 0.5s ease-out;
+}
+
+.products-list-info {
+    float: left;
+    height: 400px;
+    width: 160px;
+    border: 0;
+    display: inline-block;
+    padding: 20px 15px;
+}
+
+.products-list-info > img {
+    width: 160px;
+    height: 216px;
+    filter: drop-shadow(0 0 4px grey);
+    border-radius: 10px;
+    padding-bottom: 20px;
+}
+.products-list-info > p {
+    padding-bottom: 5px;
+    text-align: start;
+}
+.products-list-info > p.title {
+    display: block;
+    font-size: 17px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.products-list-info > p.introduction {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.products-list-carousel {
+    position: relative;
+}
+.chevron-btn {
+    position: absolute;
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 10px #a8a7a7;
+    cursor: pointer;
+}
+
+.fa-chevron-circle-left {
+    left: -50px;
+    top: 180px;
+}
+.fa-chevron-circle-right {
+    right: -50px;
+    top: 180px;
+}
+
 /* 푸터 css */
 #footer {
     width: 100%;
