--- a/src/style.css
+++ b/src/style.css
@@ -263,17 +263,9 @@
 /* 책 리스트 */
 
 .products-list-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: start;
     padding: 20px;
-}
-.products-list-header > h2 {
-    font-size: 25px;
-}
-.products-list-header > p {
     font-size: 17px;
-    color: #787878;
 }
 
 .products-list-body {
@@ -284,7 +276,7 @@
 
 .products-list-body .slides {
     position: absolute;
-    width: 1900px;
+    width: 5700px;
     left: 0;
     transition: left 0.5s ease-out;
 }
@@ -300,7 +292,7 @@
 
 .products-list-info > img {
     width: 160px;
-    height: 216px;
+    height: 225px;
     filter: drop-shadow(0 0 4px grey);
     border-radius: 10px;
     padding-bottom: 20px;
@@ -339,10 +331,14 @@
 .fa-chevron-circle-left {
     left: -50px;
     top: 180px;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
 .fa-chevron-circle-right {
     right: -50px;
     top: 180px;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
 }
 
 /* 푸터 css */
