--- a/src/style.css
+++ b/src/style.css
@@ -394,6 +394,29 @@
     transition: opacity 1s ease-in-out;
 }
 
+/* top으로 스크롤 되는 버튼 */
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 60px;
+    right: 40px;
+    width: 45px;
+    height: 45px;
+    border-radius: 100px;
+    color: #9e9e9e;
+    background-color: white;
+    filter: drop-shadow(0 0 3px grey);
+    transition: opacity 0.7s ease-in-out;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll-to-top > p {
+    font-size: 13px;
+    font-weight: 500;
+}
 /* 푸터 css */
 #footer {
     width: 100%;
