--- a/src/css/category.css
+++ b/src/css/category.css
@@ -57,19 +57,135 @@ section h2 { font-size: 24px; color:#606DB8; font-weight: 400; }
 .category-update { display: flex; justify-content: space-between; align-items: center; margin-top: 12px;}
 .category-update input { width: 28%; height: 38px;}
 .category-update .new-category { margin-left: -178px;}
-/* 상품 관리 */
-.item-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid lightgray;}
-.item-header-button button {  margin: 4px 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px; }
 
-.item-col1 td { text-align: left; padding-top: 8px; font-size: 18px; color: #606DB8;}
-.item-col2 { text-align: left;}
-.item-col2-list { text-align: left;}
-.item-col2-list.first { margin-top: 20px;}
-.item-col2-list h4 { position: relative; font-size: 16px; font-weight: 400;}
-.item-col2-list .col2-button { text-align: right;}
-.item-col2-list button { text-align: right; padding: 4px 20px; background-color: #606DB8; font-size: 11px; color: #fff; border-radius: 5px; }
-.item-col2-list { margin: 6px 0;}
-.item-col2-list td { padding: 2px 0; }
+/* 상품 관리 */
+.main-product-list > div { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid lightgray;}
+.header-text-product { font-size: 25px; font-weight: 500; padding: 20px 0px 20px 0px; }
+.add-product-button {width: 16.5%; margin: 0 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
+.admin-book-list {
+    display: inline-flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 60px;
+    border-bottom: 1px solid lightgray;
+}
+
+.admin-book-item {
+    width: 100%;
+    display: inline-flex;
+    padding: 30px 0;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.admin-book-list .admin-book-item:first-of-type {
+    padding-top: 0;
+}
+
+.admin-book-list .admin-book-item:last-of-type {
+    padding-bottom: 0;
+    border: none;
+}
+
+.admin-book-item-img-area {
+    display: flex;
+    width: 120px;
+    margin-right: 30px;
+}
+
+.admin-book-img-link {
+    overflow: hidden;
+}
+
+.admin-book-img {
+    width: 120px;
+    height: 174px;
+    border-radius: 4px;
+}
+
+.admin-book-item-introduce {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    padding-right: 30px;
+}
+
+.admin-book-item-title-head {
+    display: flex;
+    align-items: center;
+}
+
+.admin-book-item-title {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #141414;
+    line-height: 19px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    white-space: normal;
+    max-height: calc(19px * 1);
+}
+
+.admin-book-item-output {
+    display: inline-flex;
+    width: 100%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.admin-book-item-author,
+.admin-book-item-publisher {
+    display: inline;
+    font-size: 14px;
+    line-height: 16px;
+    color: #787878;
+}
+
+.admin-book-item-publisher::before {
+    content: "";
+    display: inline-block;
+    background-color: #787878;
+    width: 2px;
+    height: 2px;
+    margin: 0 5px 4px;
+    border-radius: 100%;
+}
+
+.admin-book-item-describe {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-align: start;
+    width: 100%;
+    margin-bottom: 4px;
+    font-size: 14px;
+    color: #666666;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    word-wrap: break-word;
+    white-space: normal;
+    max-height: calc(20px * 2);
+}
+
+.admin-book-item-price {
+    text-align: left;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 13px;
+    color: #606db8;
+    line-height: 16px;
+}
+.admin-button { margin-left: 360px; display: flex; align-items: center;}
+.admin-button-area { display: flex; flex-direction: column; justify-content: center; align-items: center;}
+.admin-button-area button { width: 84px; margin: 6px 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
 
 /* 배송 관리 */
 
@@ -111,10 +227,12 @@ select:focus { outline: 1px solid #606DB8;}
 .modal-cont { margin-top: 2rem;}
 .modal-cont input { width: 80%; }
 .modal-cont div { display: flex; justify-content: space-between; align-items: center; padding: 12px 0;}
+.modal-cont div:nth-child(4) { justify-content: flex-start;}
+.modal-cont div:nth-child(4) select { margin-left: 25px; width: 16%; height: 35px;}
 .modal-cont div:last-child { align-items:flex-start; }
 .modal-cont div:last-child input { height: 258px; }
-.modal-cont div label { padding-left: 26px; }
-#modal-book-info { width: 80%; height: 258px; padding: 0 15px; display: block; background: #fff; border-radius: 4px; border: solid 1px #ddd; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
+.modal-cont div label { padding-left: 12px; }
+#modal-book-info { width: 80%; height: 108px; padding: 4px 15px; display: block; background: #fff; border-radius: 4px; border: solid 1px #ddd; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 #modal-book-info:focus { outline: 2px solid #606DB8;}
 .modal-button { margin-left: 48px; text-align: center;}
 .modal-button button { padding: 4px 20px; background-color: #606DB8; font-size: 18px; font-weight: 400; color: #fff; border-radius: 5px;}
