fix: modified search input in index.css, cart.css

--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@
     margin-right: 12px;
 }
 
-.search-input {
+.header .search-input {
     width: 100%;
     height: 100%;
     padding: 10px 12px;
@@ -149,11 +149,28 @@
 }
 
 /* swiper */
-.swiper { width: 950px; height: 400px; margin: 24px 0; border-radius: 4px;}
-.swiper-slide.fst { background: url("https://grepp-programmers.s3.amazonaws.com/production/file_resource/2866/certi-book-event_1200x628.png") center center / cover no-repeat;}
-.swiper-slide.snd { background: url("https://i.ytimg.com/vi/H91z8YxNrOY/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBPmx01JUAv4_WSAp2NkHqKuVOUQQ")center center / cover no-repeat;}
-.swiper-slide.trd { background: url("https://i.ytimg.com/vi/6kzsVLNZQ0E/maxresdefault.jpg") center center / cover no-repeat;}
-.swiper-slide.fth { background: url("https://contents.kyobobook.co.kr/pmtn/2022/event/68a088ac677f48a689f5dce8046cce7f.jpg") center center / cover no-repeat;}
+.swiper {
+    width: 950px;
+    height: 400px;
+    margin: 24px 0;
+    border-radius: 4px;
+}
+.swiper-slide.fst {
+    background: url("https://grepp-programmers.s3.amazonaws.com/production/file_resource/2866/certi-book-event_1200x628.png")
+        center center / cover no-repeat;
+}
+.swiper-slide.snd {
+    background: url("https://i.ytimg.com/vi/H91z8YxNrOY/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBPmx01JUAv4_WSAp2NkHqKuVOUQQ")
+        center center / cover no-repeat;
+}
+.swiper-slide.trd {
+    background: url("https://i.ytimg.com/vi/6kzsVLNZQ0E/maxresdefault.jpg")
+        center center / cover no-repeat;
+}
+.swiper-slide.fth {
+    background: url("https://contents.kyobobook.co.kr/pmtn/2022/event/68a088ac677f48a689f5dce8046cce7f.jpg")
+        center center / cover no-repeat;
+}
 
 .swiper-button-prev::after {
     color: #fff;
@@ -165,37 +182,47 @@
     transition: all 0.1s ease;
 }
 
-.swiper-button-prev:hover:after { 
+.swiper-button-prev:hover:after {
     color: #000;
 }
 
-.swiper-button-next:hover:after { 
+.swiper-button-next:hover:after {
     color: #000;
 }
-
 
 /* 카테고리 네비 css */
 .all-category-container {
-    border-bottom: 1px solid lightgray;;
+    border-bottom: 1px solid lightgray;
 }
 
-.all-category-list { display: flex; justify-content: space-between; align-items: center;}
+.all-category-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-.populate-book-list { display: flex; justify-content: center; align-items: center; gap: 52px; padding: 18px;}
+.populate-book-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 52px;
+    padding: 18px;
+}
 
 .all-category-link {
     display: inline-block;
     padding: 18px;
 }
 
-.all-category-text, .populate-book-list li a {
+.all-category-text,
+.populate-book-list li a {
     font-weight: 500;
     font-size: 24px;
     color: darkgray;
     transition: all 0.35s ease;
 }
 
-.all-category-text:hover { 
+.all-category-text:hover {
     color: #000;
 }
 
