--- a/src/css/category.css
+++ b/src/css/category.css
@@ -11,11 +11,9 @@
 /* 공용 컨테이너 */
 .container { width: 950px; margin: 0 auto; }
 
-/* 로그인, 회원가입, 주문확인 */
-/* .category.container { width: 500px; margin: 0 auto; } */
 
 /* 레이아웃 여백 */
-.row { }  
+
 
 /* 헤더 */
 #header .row { display: flex; justify-self: center; align-items: center; padding: 20px 0;}
@@ -32,12 +30,10 @@
 .header-nav-list ul li a:before { content:""; width: 100%; height: 2px; background-color: #606DB8; position: absolute; bottom: -8px; opacity: 0; transition: all 0.3s ease-in-out;}
 
 
-/* 각 관리 페이지 section */
-
 /* 초기 display */
 
 .on { display: block; }
-.fix_modal.on { display: block;}
+.fix_modal.on, .order_modal.on { display: block;}
 .update_modal.on {display: block;}
 
 /* 카테고리 등록*/
@@ -187,11 +183,25 @@ section h2 { font-size: 24px; color:#606DB8; font-weight: 400; }
 .admin-button-area { display: flex; flex-direction: column; justify-content: center; align-items: center;}
 .admin-button-area button { width: 84px; margin: 6px 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
 .admin-button-area p { width: 84px; margin: 6px 4px; padding: 8px 20px; background-color: #dedede; font-size: 14px; color: #000; border-radius: 5px; text-align: center; padding: 8px 4px; }
+
+
 /* 주문,배송 관리 */
 .header-nav-list { display: flex; justify-content: center; align-items: center;}
+.admin-order-button { margin-left: 200px; display: flex; align-items: center;}
+.admin-order-info { width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start;};
+.admin-order { display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80%;}
+.order_modal { width: 47vh; height: 40vh; position: absolute; top: 550px; left: 450px; display: none; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2;}
+.order_modal select { margin-left: 24px;}
+.order_modal select:focus { outline: 2px solid #606DB8;}
+.admin-order { display: flex; flex-direction: column; justify-content: center; align-items: flex-start; width: 80%;}
+.admin-order b { margin-right: 10px;}
 
 /* 상품등록, 수정 modal */
-.fix_modal, .update_modal { width: 50%; height: 85vh; position: fixed; top: 80px; left: 394px; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2; display: none;}
+.fix_modal, .update_modal { display: none; width: 50%; height: 85vh; position: fixed; top: 80px; left: 394px; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2;}
 .modal-container { width: 100%;}
 .modal-container .row { padding: 50px 50px 50px 26px;}
 .modal-title { margin-left: 26px; border-bottom: 2px solid lightgray;}
@@ -206,5 +216,5 @@ section h2 { font-size: 24px; color:#606DB8; font-weight: 400; }
 .modal-cont div label { padding-left: 12px; }
 #modal-book-info { width: 80%; height: 108px; padding: 4px 15px; display: block; background: #fff; border-radius: 4px; border: solid 1px #ddd; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 #modal-book-info:focus { outline: 2px solid #606DB8;}
-.modal-button { margin-left: 48px; text-align: center;}
+.modal-button { text-align: center;}
 .modal-button button { padding: 4px 20px; background-color: #606DB8; font-size: 18px; font-weight: 400; color: #fff; border-radius: 5px;}
