--- a/src/style.css
+++ b/src/style.css
@@ -408,7 +408,7 @@
     padding: 20px 15px;
 }
 
-.products-list-info > img {
+.products-list-info img {
     width: 160px;
     height: 225px;
     filter: drop-shadow(0 0 4px grey);
