--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -227,7 +227,6 @@
     border-bottom: 2px solid lightgray;
 }
 
-
 .category-book-line {
     display: block;
     width: 100%;
@@ -434,6 +433,79 @@
 
 .page-number-text-active {
     font-weight: 700;
+}
+
+/* 모달창 */
+
+/* 모달창 끗 */
+.cart-alert {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-alert-container {
+    background-color: white;
+    width: 50%;
+    max-width: 400px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 30px;
+    position: relative;
+}
+
+.quit_btn {
+    text-align: end;
+    height: 20px;
+    padding-right: 10px;
+    margin-bottom: 10px;
+}
+.close-alert {
+    border: none;
+    background-color: transparent;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.close-alert:focus {
+    outline: none;
+}
+
+.cart-alert-content h2 {
+    font-size: 19px;
+    padding-bottom: 10px;
+}
+.cart-alert-content p {
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+.cart-alert-button {
+    display: flex;
+    justify-content: center;
+}
+
+.cart-alert-button button {
+    width: 150px;
+    height: 50px;
+    margin-left: 10px;
+    border-radius: 7px;
+    font-size: 18px;
+    color: white;
+}
+
+.cancel-button {
+    background-color: #818080;
+}
+
+.confirm-button {
+    background-color: #606db8;
 }
 
 /* 푸터 css */
