--- a/src/css/order.css
+++ b/src/css/order.css
@@ -293,28 +293,30 @@ h3 {
     width: 120px;
 }
 
-input#check-btn {
+/* input#check-btn {
     display: none;
-}
+} */
 
 .agreement > h3 {
     height: 70px;
     font-size: 23px;
-    font-weight: 500px;
+    font-weight: 500;
     padding: 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.agreement > label > span {
+#message:focus { outline: 2px solid #606db8}
+
+.agreement > span {
     font-size: 16px;
     font-weight: 500;
     padding-left: 10px;
     vertical-align: middle;
 }
 
-input#check-btn + label:before {
+/* input#check-btn + label:before {
     content: "";
     width: 17px;
     height: 17px;
@@ -322,7 +324,7 @@ input#check-btn + label:before {
     border: 2px solid #7780b1;
     border-radius: 4px;
     vertical-align: middle;
-}
+} */
 
 input#check-btn:checked + label:before {
     content: "";
