connect eladin's pick to detail page, fixed nav bar css in index.html/js, style.css

--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,7 @@
     height: 400px;
     margin: 24px 0;
     border-radius: 4px;
+    z-index: 1;
 }
 .swiper-slide.fst {
     background: url("https://media.discordapp.net/attachments/1097500162722627589/1100816919638061198/001.png?width=1799&height=719")
@@ -196,14 +197,28 @@
 }
 
 /* 카테고리 네비 css */
+.all-category-nav {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
 .all-category-container {
     border-bottom: 1px solid lightgray;
+    box-shadow: 0px 5px 5px -5px gray;
+    background-color: white;
 }
 
 .all-category-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.all-category-list .fa-bars {
+    font-size: 23px;
+    padding-right: 10px;
+    color: #787878;
 }
 
 .populate-book-list {
@@ -222,8 +237,8 @@
 .all-category-text,
 .populate-book-list li a {
     font-weight: 500;
-    font-size: 24px;
-    color: darkgray;
+    font-size: 21px;
+    color: rgb(112, 112, 112);
     transition: all 0.35s ease;
 }
 
@@ -232,7 +247,7 @@
 }
 
 .populate-book-list li:hover a {
-    color: #000;
+    color: #606db8;
 }
 
 /* 메인 css */
@@ -347,7 +362,7 @@
     padding: 20px;
 }
 
-.introduction-content > img {
+.introduction-content img {
     width: 229px;
     height: 337px;
     filter: drop-shadow(0 0 4px grey);
