fix: 카테고리 책 없는경우, animate css, 상세페이지 css detail

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import "./css/fonts.css";
 @import "./css/default.css";
 @import "./css/font-awesome.css";
+@import "./css/animate.min.css";
 
 /* 전체 레이아웃 */
 #wrap {
