--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -275,10 +275,24 @@
     text-align: center;
     border-radius: 5px;
     margin: 0 2px;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
+
+.main-user-buy ul li:hover {
+    background-color: #606db8;
+}
+
+.main-user-buy ul li:hover a {
+    color: #fff;
+}
+
 .main-user-buy ul .buy-button {
     padding: 0 32px;
     background-color: #606db8;
+}
+.main-user-buy ul .buy-button:hover {
+    background-color: #5260b2;
 }
 .buy-button a {
     color: #fff;
