--- a/src/css/modify_mypage.css
+++ b/src/css/modify_mypage.css
@@ -195,6 +195,15 @@ main h3 {
         "email email-field"
         "password password-field";
 }
+.id-field {
+    padding-left: 28px;
+    color:#606db8;
+    font-size: 14px;
+}
+
+.change-userid { 
+    margin-left: 8px;
+}
 
 .table > .default {
     padding-right: 20px;
@@ -235,6 +244,15 @@ main h3 {
     border-radius: 5px;
     color: white;
     background: #606db8;
+}
+
+.email-field {
+    position: relative;
+}
+
+.email-field small {
+    position: absolute;
+    bottom:30px;
 }
 
 .table .password-field input {
