feat: 로그인, 정보수정 유효성 검사 api

--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -162,8 +162,9 @@
 
 .nav-side-category-bar {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     cursor: pointer;
 }
 
