fix: main page css

--- a/src/style.css
+++ b/src/style.css
@@ -378,7 +378,7 @@
     padding-bottom: 15px;
 }
 
-.introduction-detail > .title {
+.introduction-detail .title {
     font-size: 23px;
     font-weight: 500;
 }
