--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -46,6 +46,7 @@
     line-height: 18px;
     text-align: center;
     color: #787878;
+    cursor:pointer;
 }
 
 .header-top-item:first-child::after {
