--- a/src/css/order.css
+++ b/src/css/order.css
@@ -203,7 +203,7 @@ h3 {
     align-items: center;
     display: grid;
     grid-template-columns: 200px 1fr 130px;
-    grid-template-areas: "cover book-detail price";
+    grid-template-areas: "cover book-detail quantity price";
     user-select: none;
 }
 
@@ -217,6 +217,13 @@ h3 {
 }
 
 .product-detail > .price {
+    font-size: 20px;
+    font-weight: 700;
+    color: #3e4989;
+}
+
+.product-detail .quantity {
+    justify-self: end;
     font-size: 20px;
     font-weight: 700;
     color: #3e4989;
